# Cadence

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  README.md  index.html  roadmap.html  setup.html  support.html
.github/workflows/: ci.yml  pages.yml
app/: package-lock.json  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: AppShell.tsx  Generate.tsx  Library.tsx  Loading.tsx  Settings.tsx  SetupGuide.tsx  VoiceSetup.tsx
app/src/lib/: engine.ts  player.tsx  recorder.ts  script.ts
assets/: styles.css
engine/: pyproject.toml  run_engine.py
engine/app/: acestep_service.py  applio_service.py  db.py  errorlog.py  jobs.py  keystore.py  main.py  mock_audio.py  mp3_helper.py  remix_helper.py  secrets.py  settings.py  stems.py  system_info.py  text_provider.py  voice_service.py
scripts/: build-sidecar.sh  make-brand-art.py  setup-backends.ps1  setup-backends.sh  verify_phase1.py  verify_phase2.py  verify_phase3.py
site/: index.html  roadmap.html  setup.html  support.html
site/assets/: site.js  styles.css
