[project]
name = "cadence-engine"
version = "0.1.6"
description = "Cadence local engine — music generation and voice conversion, served over localhost"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.139.0",
    "keyring>=25.7.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
